--- a/07.File/07.File.md
+++ b/07.File/07.File.md
@@ -2,7 +2,7 @@
 
 ### Типы файлов.
 ### Функции стандартной библиотеки
-### Парадигма - все является файлом. Спеуиализированные файловые системы (`proc`)
+### Парадигма - все является файлом. Специализированные файловые системы (`proc`)
 ### Ограничения процесса по дескрипторам файлов
 ### Стандартные потоки ввода вывода
 ### Демоны. Потоки без ввода вывода
