--- a/04.Language/04.Language.md
+++ b/04.Language/04.Language.md
@@ -1,5 +1,33 @@
 ## Язык Си
 
+### Параметры компилятора
+
+#### `GCC`
+
+Позиционно независимый код (`Position Independent Code`). Необходим для разделяемых библиотек
+```
+-fPIC
+```
+Параметры линковки, задает имя библиотеки `libraryname.so.1` и флаг разделяемой библиотеки
+```bash
+-shared -Wl,-soname,libraryname.so.1
+```
+Задает директорию, в нашем случаем с переменной `$(DEFAULT_LIB_INSTALL_PATH)`, где линковщик будет искать библиотеки для линковки
+```bash
+-Wl,-rpath,$(DEFAULT_LIB_INSTALL_PATH)
+```
+Регистрирует каталог с разделяемыми библиотеками в системе
+```bash
+ldconfig -n каталог
+```
+```bash
+export LD_LIBRARY_PATH=${LD_LIBRARY_PATH}:каталог
+```
+В свою очередь, ОС `Windows`, производит поиск зависимых разделяемых библиотек в следующей последовательности:
+1. Производится поиск в текущей директории запуска исполняемого модуля
+2. Производится поиск в директориях описанных в переменной окружения `PATH`
+3. Производится поиск в системной директории `system32`
+
 ### Организация кода
 
 1. Включение заголовочных файлов
@@ -45,7 +73,173 @@ long  |   4     |
 float |   4     |
 double|   8     |
 
-### Макроподстановки. Макроопределения.
+#### Квалификаторы
+
+По стандарту `C11`, существует четыре квалификатора типа:
+
+* `const (C89)` - означает что данный тип неизменяем после инициализации. (константа)
+* `volatile (C89)` - означает что значение данной переменной часто подвержено изменениям.
+* `restrict (C99)` - объявляемый указатель указывает на блок памяти, на который не указывает никакой другой указатель
+* `_Atomic (с C11)`. Также может именоваться `atomic`, если подключить `stdatomic.h`.
+
+Также с 99го стандарта был добавлен квалификатор для функций `inline`, который является подсказкой компилятору, говорящей включить код из тела функции, вместо вызова самой функции.
+
+Одной переменной могут принадлежать несколько квалификаторов.
+
+```cpp
+const volatile int a = 5;
+volatile int const * b = &a; //указатель на const volatile int
+int * const c = 0;        // const указатель на int
+```
+
+#### Классы хранения
+
+Также в Си существует четыре класса хранения:
+* `auto` - по-умолчанию для всех переменных.
+* `register` - подсказка компилятору хранить переменные в регистрах процессора. Для таких переменных отсутствует операция взятия адреса
+* `static` - статические переменные. Имеют область видимости файла.
+* `extern` - переменные объявленные
+
+### Макроподстановки. Макроопределения. Препроцессор.
+
+Директивы:
+* `define` - создание константы или макроса;
+* `undef` - удаление константы или макроса;
+* `include` - вставка содержимого указанного файла;
+* `if` - проверка истинности выражения;
+* `ifdef` - проверка существования константы или макроса;
+* `ifndef` - проверка не существования константы или макроса;
+* `else` - ветка условной компиляции при ложности выражения `if`;
+* `elif` - проверка истинности другого выражения; краткая форма записи для комбинации `else` и `if`;
+* `endif` - конец ветки условной компиляции;
+* `line` - указание имени файла и номера текущей строки для компилятора;
+* `error` - вывод сообщения и остановка компиляции;
+* `warning` - вывод сообщения без остановки компиляции;
+* `pragma` - указание действия, зависящего от реализации, для препроцессора или компилятора;
+* если ключевое слово не указано, директива игнорируется;
+* если указано несуществующее ключевое слово, выводится сообщение об ошибке и компиляция прерывается.
+
+#### Вставка файла
+
+При обнаружении директив `#include "..."` и `#include <...>`, где "…" - имя файла, препроцессор читает содержимое указанного файла, выполняет директивы и замены (подстановки), заменяет директиву `#include` на директиву `#line` и обработанное содержимое файла.
+
+Для `#include "..."` поиск файла выполняется в текущей папке и папках, указанных в командной строке компилятора. Для `#include <...>` поиск файла выполняется в папках, содержащих файлы стандартной библиотеки (пути к этим папкам зависят от реализации компилятора).
+
+При обнаружении директивы `#include` последовательность-лексем не совпадающей ни с одной из предыдущих форм, рассматривает последовательность лексем как текст, который в результате всех макроподстановок должен дать `#include <...>` или `#include "..."`. Сгенерированная таким образом директива далее будет интерпретироваться в соответствии с полученной формой.
+
+Включаемые файлы обычно содержат:
+* объявления функций;
+* объявления глобальных переменных;
+* определения интерфейсов;
+* определения типов данных;
+
+Директива `#include` обычно указывается в начале файла (в заголовке), поэтому включаемые файлы называются заголовочными.
+
+Пример включения файлов из стандартной библиотеки языка C.
+```cpp
+#include <math.h>
+#include <stdio.h>
+```
+Использование препроцессора считается неэффективным по следующим причинам:
+* каждый раз при включении файлов выполняются директивы и замены (подстановки); компилятор мог бы сохранять результаты препроцессирования для использования в будущем;
+* множественные включения одного файла приходится предотвращать вручную с помощью директив условной компиляции; компилятор мог бы выполнять эту задачу самостоятельно.
+
+#### Константы и макросы
+
+Константы и макросы препроцессора используются для определения небольших фрагментов кода.
+```cpp
+// константа
+#define BUFFER_SIZE ( 1024 )
+
+// макрос
+#define NUMBER_OF_ARRAY_ITEMS( array ) ( sizeof( array ) / sizeof( *(array) ) )
+```
+Каждая константа и каждый макрос заменяются соответствующим им определением. Макросы имеют параметры, похожи на функции, используются для уменьшения накладных расходов при вызове функций в случаях, когда небольшого кода, вызываемого функцией, достаточно для ощутимого снижения производительности.
+
+Пример. Определение макроса max, принимающего два аргумента: `a` и `b`.
+```cpp
+#define max( a, b ) ( (a) > (b) ? (a) : (b) )
+```
+Макрос вызывается так же, как и любая функция.
+```cpp
+z = max( x, y );
+```
+После замены макроса код будет выглядеть следующим образом:
+```cpp
+z = ( (x) > (y) ? (x) : (y) );
+```
+Однако, наряду с преимуществами использования макросов в языке Си, например, для определения обобщённых типов данных или отладочных инструментов, они также несколько снижают эффективность их применения и даже могут привести к ошибкам.
+
+Например, если `f` и `g` - две функции, вызов
+```cpp
+z = max( f(), g() );
+```
+не вычислит один раз `f()` и один раз `g()`, и поместит наибольшее значение в `z`, как этого можно было ожидать. Вместо этого одна из функций будет вычислена дважды. Если функция имеет побочные эффекты, то вероятно, что её поведение будет отличаться от ожидаемого.
+
+Макросы Си могут походить на функции, создавая новый синтаксис в некоторых пределах, а также могут быть дополнены произвольным текстом (хотя компилятор Си требует, чтобы текст был без ошибок написанным Си-кодом или оформлен как комментарий), но у них есть некоторые ограничения как у программных конструкций. Макросы, схожие с функциями, например, могут быть вызваны как «настоящие» функции, но макрос не может быть передан другой функции при помощи указателя, по той причине, что макрос сам по себе не имеет адреса.
+
+Некоторые современные языки обычно не используют такой способ метапрограммирования с использованием макросов как дополнений строк символов, в расчете или на автоматическое или на ручное подключение функций и методов, а вместо этого другие способы абстракции, такие как шаблоны, обобщённые функции или параметрический полиморфизм. В частности, встраиваемые функции позволяют избежать одного из главных недостатков макросов в современных версиях Си и C++, так как встроенная функция обеспечивает преимущество макросов в снижении накладных расходов при вызове функции, но её адрес можно передавать в указателе для косвенных вызовов или использовать в качестве параметра. Аналогично, проблема множественных вычислений, упомянутая выше в макросе max, для встроенных функций неактуальна.
+
+Константы `#define` можно заменить на `enum`, а макросы - на функции `inline`.
+
+#### Условная компиляция
+
+Препроцессор языка Си предоставляет возможность компиляции с условиями. Это допускает возможность существования различных версий одного кода. Обычно такой подход используется для настройки программы под платформу компилятора, состояние (отлаживаемый код может быть выделен в результирующем коде) или возможность проверки подключения файла строго один раз.
+
+В общем случае, программисту необходимо использовать конструкцию типа:
+```cpp
+#ifndef FOO_H
+#define FOO_H
+
+
+
+#endif
+```
+
+Такая "защита макросов" предотвращает двойное подключение заголовочного файла путём проверки существования этого макроса, который имеет то же самое имя, что и заголовочный файл. Определение макроса `FOO_H` происходит, когда заголовочный файл впервые обрабатывается препроцессором. Затем, если этот заголовочный файл вновь подключается, `FOO_H` уже определен, в результате чего препроцессор пропускает полностью текст этого заголовочного файла.
+
+То же самое можно сделать, включив в заголовочный файл директиву:
+```cpp
+# pragma once
+```
+Условия препроцессора можно задавать несколькими способами, например:
+```cpp
+# ifdef x
+
+# else
+
+# endif
+```
+```cpp
+# if x
+
+# else
+
+# endif
+```
+Этот способ часто используется в системных заголовочных файлах для проверки различных возможностей, определение которых может меняться в зависимости от платформы; например, библиотека `Glibc` использует макросы с проверкой особенностей с целью проверить, что операционная система и оборудование их (макросы) корректно поддерживает при неизменности программного интерфейса.
+
+Большинство современных языков программирования не используют такие возможности, больше полагаясь на традиционные операторы условия `if...then...else...`, оставляя компилятору задачу извлечения бесполезного кода из компилируемой программы.
+
+#### Предопределённые константы
+Константы, создаваемые препроцессором автоматически:
+
+* `__LINE__` заменяется на номер текущей строки; номер текущей строки может быть переопределен директивой `#line`; используется для отладки;
+* `__FILE__` заменяется на имя файла; имя файла тоже может быть переопределено с помощью директивы `#line`;
+* `__FUNCTION__` заменяется на имя текущей функции;
+* `__DATE__` заменяется на текущую дату (на момент обработки кода препроцессором);
+* `__TIME__` заменяется на текущее время (на момент обработки кода препроцессором);
+* `__TIMESTAMP__` заменяется на текущие дату и время (на момент обработки кода препроцессором);
+* `__COUNTER__` заменяется на уникальное число, начиная от 0; после каждой замены число увеличивается на единицу;
+* `__STDC__` заменяется на 1, если компиляция происходит в соответствии со стандартом языка C;
+* `__STDC_HOSTED__` определена в `C99` и выше; заменяется на 1, если выполнение происходит под управлением ОС;
+* `__STDC_VERSION__` определена в `C99` и выше; для `C99` заменяется на число `199901`, а для `C11` - на число `201112`;
+* `__STDC_IEC_559__` определена в `C99` и выше; константа существует, если компилятор поддерживает операции с числами с плавающей точкой по стандарту `IEC 60559`;
+* `__STDC_IEC_559_COMPLEX__` определена в `C99` и выше; константа существует, если компилятор поддерживает операции с комплексными числами по стандарту `IEC 60559`; стандарт C99 обязывает поддерживать операции с комплексными числами;
+* `__STDC_NO_COMPLEX__` определена в `C11`; заменяется на 1, если не поддерживаются операции с комплексными числами;
+* `__STDC_NO_VLA__` определена в `C11`; заменяется на 1, если не поддерживаются массивы переменной длины; в `С99` массивы переменной длины обязательно должны поддерживаться;
+* `__VA_ARGS__` определена в `C99` и позволяет создавать макросы с переменным числом аргументов.
+
 ### Структуры. Перечисления. Объединения.
 
 ```cpp
@@ -216,5 +410,86 @@ void example_func(int *array);
 
 #### Возврат из функции
 При возврате из функции освобождается память, выделенная под параметры функции и под переменные, объявленные внутри функции, и управление возвращается в точку вызова.
+
+### Соглашения о вызовах
+
+#### `cdecl`
+
+Используется компиляторами для языка Си.
+
+Аргументы функций передаются через стек, справа налево. Аргументы, размер которых меньше 4-х байт, расширяются до 4-х байт. Очистку стека производит вызывающая программа. Это основной способ вызова функций с переменным числом аргументов (например, `printf()`).
+
+Перед вызовом функции вставляется код, называемый прологом  и выполняющий следующие действия:
+* сохранение значений регистров, используемых внутри функции;
+* запись в стек аргументов функции.
+
+После вызова функции вставляется код, называемый эпилогом и выполняющий следующие действия:
+* восстановление значений регистров, сохранённых кодом пролога;
+* очистка стека (от локальных переменных функции).
+
+#### `stdcall`
+
+Используется в ОС `Windows` для вызова функций `WinAPI`.
+
+Аргументы функций передаются через стек, справа налево. Очистку стека производит вызываемая подпрограмма.
+
+#### `fastcall`
+
+Общее название соглашений, передающих параметры через регистры (обычно это самый быстрый способ, отсюда название). Если для сохранения всех параметров и промежуточных результатов регистров не достаточно, используется стек.
+
+Соглашение о вызовах `fastcall` не стандартизировано, поэтому используется только для вызова процедур и функций, не экспортируемых из исполняемого модуля и не импортируемых извне.
+
+#### `x64`
+
+Для архитектуры `x64`, в отличие от `x86`, параметры передаются так, первые четыре параметра через регистры `RCX`, `RDX`, `R8`, `R9`, остальные через стек.
+
+С плавающей запятой и двойной точности аргументы передаются в `XMM0`, `XMM1`, `XMM2`, `XMM3`.
+
+`__m128` строки, массивы и типы никогда не передаются по значению, вместо этого передается указатель на память.
+Пример: переменная `a` в `RCX`, переменная `b` в `RDX`, переменная `c` в `R8`, переменная `d` в `R9`, переменная `e` помешается в стек
+```cpp
+func1(int a, int b, int c, int d, int e);
+```
+Пример: переменная `a` в `XMM0`, переменная `b` в `XMM1`, переменная `c` в `XMM2`, переменная `d` в `XMM3`, переменная `e` помещается в стек
+```cpp
+func2(float a, double b, float c, double d, float e);
+```
+Пример: переменная `a` в `RCX`, переменная `b` в `XMM1`, переменная `c` в `R8`,переменная `d` в `XMM3`
+```cpp
+func3(int a, double b, int c, float d);
+```
+Пример: переменная `a` в `RCX`, указатель на `b` в `RDX`, указатель на `c` в `R8`, переменная `d` в `XMM3`
+```cpp
+func4(__m64 a, _m128 b, struct c, float d);
+```
+
+#### Возврщаемые значения
+
+Пример: переменная `a` в `RCX`, переменная `b` в `RDX`, переменная `c` в `R8`, переменная `d` в `R9`, переменная `e` помешается в стек. Результат: `__int64` помещен в `EAX`
+```cpp
+__int64 func1(int a, float b, int c, int d, int e);
+```
+Пример: переменная `a` в `XMM0`, переменная `b` в `XMM1`, переменная `c` в `R8`, переменная `d` в `R9`. Результат: `__m128` помещен в `XMM0`
+```cpp
+__m128 func2(float a, double b, int c, __m64 d);
+```
+Возвращение результат по значению.
+Структура: размер превышает 64 бита
+Пример: переменная `a` в `RDX`, переменная `b` в `XMM2`, переменная `c` в `R9`, переменная `d` помещена в стек. Результат: аллоцирован в `RCX`, указатель передан в `RAX`
+```cpp
+struct Struct1 {
+   int j, k, l;
+};
+Struct1 func3(int a, double b, int c, float d);
+```
+Возвращение результат по значению.
+Структура: размер не превышает 64 бита
+Пример: переменная `a` в `RCX`, переменная `b` в `XMM1`, переменная `c` в `R8`, переменная `d` в `XMM3`. Результат: помещен в `RAX`
+```cpp
+struct Struct2 {
+   int j, k;
+};
+Struct2 func4(int a, double b, int c, float d);
+```
 
 ### Конструкции языка
