--- a/03.SystemOS/03.SystemOS.md
+++ b/03.SystemOS/03.SystemOS.md
@@ -144,4 +144,5 @@ nm lib03.System.OS_export_if.dll
 Зависимости
 ```bash
 ldd lib03.System.OS_export_if.dll
+readelf -Ws lib03.System.OS_export_if.dll 
 ```
