--- a/01.Environment/01.Environment.md
+++ b/01.Environment/01.Environment.md
@@ -4,9 +4,22 @@
 
 #### `MinGW-64`, `MSYS`
 
-### Окружение разработки
+```bash
+pacman -Syuu
+```
+```bash
+pacman -S --needed base-devel mingw-w64-x86_64-toolchain mingw-w64-x86_64-cmake git
+```
+```bash
+git submodule init
+git submodule update --recursive
+mkdir .build
+cd .build
+cmake .. -DCMAKE_BUILD_TYPE=Release -G "MinGW Makefiles"
+mingw32-make.exe
+```
 
-????
+### Окружение разработки
 
 ### IDE
 
