--- a/04.Language/04.Language.md
+++ b/04.Language/04.Language.md
@@ -493,3 +493,22 @@ Struct2 func4(int a, double b, int c, float d);
 ```
 
 ### Конструкции языка
+
+## Получение текущего адреса вызова
+Получить текущий адрес в исполняемом модуле можно выполнив `call` по метке, в стеке будет адрес возврата
+```cpp
+void *c_address = 0;
+asm("call .int_cdecl;\n\t"
+    ".int_cdecl: \n\t"
+    "pop %%rax;\n\t"
+    "movq %%rax, %0;" : "=r"(c_address));
+fprintf(stdout, "Address: 0x%p\n", c_address);
+```
+Собрав пример, посмотрим адреса символов в исполняемом модуле вызвав команду
+```bash
+nm 04.Language_function_main.exe
+```
+Пример результата можно посмотреть на изображении
+![TIOBE](https://raw.githubusercontent.com/BasePractice/c_programming/master/04.Language/cerrent_address.PNG)
+После вызова на исполнение, адрес будет выведен в терминал
+![TIOBE](https://raw.githubusercontent.com/BasePractice/c_programming/master/04.Language/output_address.png)
