Работа с памятью. Inject. Исправление ошибок

--- a/05.Memory/05.Memory.md
+++ b/05.Memory/05.Memory.md
@@ -228,5 +228,14 @@ int d = 0;
 ### Работа с памятью в Си
 ### Указатели
 ### Представление памяти.
+
 Представление памяти в процессе.
 ### Опасности. Виды атак. Утечка памяти.
+### Функция в определенном сегменте
+```cpp
+__declspec(code_seg(".func"))
+static int segment_function() {
+    return 0x11223344;
+}
+```
+![Segment addressing](https://raw.githubusercontent.com/BasePractice/c_programming/master/05.Memory/function_in_code_segment.PNG)
