--- a/04.Language/04.Language.md
+++ b/04.Language/04.Language.md
@@ -512,3 +512,35 @@ nm 04.Language_function_main.exe
 ![TIOBE](https://raw.githubusercontent.com/BasePractice/c_programming/master/04.Language/current_address.PNG)
 После вызова на исполнение, адрес будет выведен в терминал
 ![TIOBE](https://raw.githubusercontent.com/BasePractice/c_programming/master/04.Language/output_address.png)
+## Процесс компиляции
+Создадим файл `m1.c` с кодом:
+```cpp
+#include <stdlib.h>
+#include <stdio.h>
+
+void m1() {
+  fprintf(stdout, "M1\n");
+}
+```
+Создадим файл `mm.c` с кодом:
+```cpp
+#include <stdlib.h>
+#include <stdio.h>
+
+void m1();
+
+int main() {
+  m1();
+  return 0;
+}
+```
+Скомпилируем файлы по отдельности:
+```bash
+gcc -c m1.c
+gcc -c mm.c
+```
+В реузльтате получим два файла с объектным кодом `m1.o` и `mm.o`.
+Далее линкуем оба файла и получаем исполняемый модуль/
+```bash
+gcc m1.o mm.o -o mm
+```
