--- a/03.SystemOS/03.SystemOS.md
+++ b/03.SystemOS/03.SystemOS.md
@@ -137,12 +137,22 @@ ADD R1, R2, R3; # складывает содержимое R1 и R2, резул
 
 ### Практика
 
-Получение адресов символов
+#### Получение адресов символов
 ```bash
 nm lib03.System.OS_export_if.dll
 ```
-Зависимости
+#### Зависимости
 ```bash
 ldd lib03.System.OS_export_if.dll
+ldd 03юSystem.OS_stlink_if.exe
 readelf -Ws lib03.System.OS_export_if.dll 
 ```
+#### Результат
+Получить динамически разделяемую библиотеку (`03.System.OS_export_if`) и статическую библиотеку (`03.System.OS_static_if`). Убедится, что для `Windows` расширением для динамической библиотеки является `dll`, для `Unix` подобных `so`, за исключением `Apple`, в нем `dylib`.
+При помощи утилиты `ldd` посмотреть динамическую связанность между `dll` и вызывающим модулем и отсутсвием связи, если связь не явная и вормирется в `runtime`. 
+При помощи утилиты `nm` можно посмотреть экспортируемые символы исполняемых модулей при динамической и статической линковке.
+
+
+
+
+
