Append link to git demo

--- a/02.VerControlSystem/02.VerControlSystem.md
+++ b/02.VerControlSystem/02.VerControlSystem.md
@@ -280,3 +280,4 @@ git pull
 
 1. [`Git CheatSheet`](http://ndpsoftware.com/git-cheatsheet.html)
 2. [`Git CheatSheet`](https://services.github.com/on-demand/downloads/github-git-cheat-sheet.pdf)
+3. [`Git Demo`](https://learngitbranching.js.org/?demo)
